<resources>
    <string name="app_name">Student Tutoring</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="subject_array">
        <item>English</item>
        <item>Science</item>
        <item>Math</item>
        <item>Technology</item>
        <item>Engineering</item>
        <item>Communications</item>
        <item>Other</item>
    </string-array>

    <string-array name="weekday_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="sub_spinner">Select Your Subject</string>
    <string name="ratings_title_text_view">Leave a review!</string>
    <string name="numerical_ratings_text_view">Numerical Rating</string>
    <string name="numerical_ratings_input">Enter Rating</string>
    <string name="comments_text_view">Comments:</string>
    <string name="comments_input">Enter Comment</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name="logout_button">Log Out</string>
    <string name="sign_up"> <u>Sign Up</u> </string>
    <string name="welcome_back">Welcome back! Please log in to your account</string>

    <!-->Sunny's strings<!-->
    <string name="ratings_title">Rate A Tutor</string>
    <string name="tutor_name_textview">Tutor Name…</string>
    <string name="tutor_name_single_line">Name</string>
    <string name="comments_textview">Comments:</string>
    <string name="comments_multi_line">Add Comment…</string>
    <string name="recommend_tutor_textview">Recommend Tutor?</string>
    <string name="no_text_view">No</string>
    <string name="yes_text_view">Yes</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="submit_button_text">Submit</string>
    <string name="go_home_button">Home</string>
    <string name="confirmation_text_view">Your review has been sent!</string>
    <string name="thank_you_text_view">Thank You!</string>
    <string name="login">LogIn</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="rating">Rating</string>
    <string name="home">Home</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="contact_number">Contact Number</string>
    <string name="resume">Resume</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="_111_111_1111">111-111-1111</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_email_com">johndoe@email.com</string>
    <string name="welcome_joe">Welcome, Joe!</string>
    <string name="student_tutoring_login">Student Tutoring Login</string>
    <string name="no_account_sign_up_here">No account? Sign Up Here!</string>
    <string name="password">Password</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up_for_tutoring">Sign Up for Tutoring</string>
    <string name="welcome">Welcome,</string>
    <string name="x">X</string>
    <string name="tutoring_availability">Tutoring Availability</string>


</resources>