<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ratings">

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="84dp"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="84dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/review_text_view"
        android:layout_width="152dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:text="@string/ratings_title_text_view"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/comment_text"
        android:layout_width="265dp"
        android:layout_height="105dp"
        android:layout_marginBottom="164dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/comments_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rating_number"
        android:layout_width="164dp"
        android:layout_height="50dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/numerical_ratings_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/comment_text_view"
        android:layout_width="79dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="284dp"
        android:text="@string/comments_text_view"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rating_text_view"
        android:layout_width="132dp"
        android:layout_height="35dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="200dp"
        android:text="@string/numerical_ratings_text_view"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>